2 Update of final proyect adding transitions and fix some bugs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header class="header-container">
 
         <!-- Navigation Bar -->
+        
         <nav >
             <img src="images/logo.svg" alt="logo manage site">
             <ul class="nav-links-elements-hide">
@@ -184,7 +185,7 @@
 
             <div class="group-form-copyright">
                 <form action="">
-                    <input type="text" placeholder="Updates in your inbox..." pattern=".+@.+\..+" required>
+                    <input type="email" placeholder="Updates in your inbox..." pattern=".+@.+\..+">
                     <button class="orange-botton-style" type="submit">GO</button>
                 </form>
                 <p class="copyright-desktop">Copyright 2020. All Rights Reserved</p>
@@ -216,7 +217,7 @@
                 <div class="social-icons">
                     <a href="https://www.facebook.com"><img src="images/icon-facebook.svg" alt="Facebook icon"></a>
                     <a href="https://www.youtube.com"><img src="images/icon-youtube.svg" alt="Youtube icon"></a>
-                    <a href="https://www.Twiter.com"><img src="images/icon-twitter.svg" alt="Twiter icon"></a>
+                    <a href="https://www.twitter.com"><img src="images/icon-twitter.svg" alt="Twiter icon"></a>
                     <a href="https://www.pinterest.com"><img src="images/icon-pinterest.svg" alt="Pinterest icon"></a>
                     <a href="https://www.instagram.com"><img src="images/icon-instagram.svg" alt="Instagram icon"></a>
                 </div>
