--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
             <div class="group-form-copyright">
                 <form action="">
-                    <input type="email" placeholder="Updates in your inbox..." pattern=".+@.+\..+">
+                    <input type="email" name="email" placeholder="Updates in your inbox..." pattern=".+@.+\..+">
                     <button class="orange-botton-style" type="submit">GO</button>
                 </form>
                 <p class="copyright-desktop">Copyright 2020. All Rights Reserved</p>
@@ -194,21 +194,17 @@
             <!-- Navigation footer links -->
 
             <div class="group-links-navigation">
-                <div>
-                    <ul>
-                        <li>Home</li> 
-                        <li>Pricing</li>
-                        <li>Products</li>
-                        <li>About us</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                        <li>Careers</li>
-                        <li>Comunity</li>
-                        <li>Privacy Policy</li>
-                    </ul>
-                </div>
+                <ul>
+                    <li>Home</li> 
+                    <li>Pricing</li>
+                    <li>Products</li>
+                    <li>About us</li>
+                </ul>
+                <ul>
+                    <li>Careers</li>
+                    <li>Comunity</li>
+                    <li>Privacy Policy</li>
+                </ul>
             </div>
 
             <!-- Social icons -->
